src/components/DeskCard/DeskCard.css
.card-header {
    padding-top: 5px !important;
    padding-bottom: 5px !important;
    background-color: unset !important;
    margin: unset !important;
}

.card-title {
    margin: unset !important;
    margin-bottom: 5px !important;
    text-align: left;
}

.DeskCardHeader {
    margin-left: 5px;
}

.DeskCardHeader h6 {
    margin-bottom: 0px;
}

.DeskCardHeader p {
    text-align: left;
    margin-bottom: 0px;
    font-size: x-small;
    color: gray;
}

.btn.btn-light.card :hover{
    background-color: unset !important;
}

@media only screen and (max-device-width: 600px) {
    .card-header {
        padding-left: unset !important;
    }
}

